--- a/css/style.css
+++ b/css/style.css
@@ -175,7 +175,7 @@ img {
   .container {
     display: grid;
     grid-template-columns: 50px auto 500px auto 50px;
-    grid-template-rows: repeat(300px, 4);
+    grid-template-rows: repeat(4, 300px);
   }
 
   .about, .method, .clients-image, .contact-image {
